# third_arm_project

./: .gitignore  CMakeLists.txt  README.md  Research Semester Report.docx  motion planning pipeline.drawio  package.xml  ~$search Semester Report.docx  ~WRL1282.tmp
5DoF_IK-master/: IK.m  third_arm_fk.m
bags/: subset.bag
config/: arbotix.yaml  dof_controllers.yaml  dof_controllers.yaml~  manager.yaml  manager.yaml~  manager_noetic.yaml  motion_noetic.yaml  poses.yaml  poses.yaml~  wrta_controllers.yaml
docs/: WRTA Report.docx
imu_stuff/: Readme.txt  Readme.txt~  imu_laur.py  translator.py
kinematics/: IK.m  IK_test.m  IK_test.py  ViconTrackerPoseHandler_ROS.py  moveIt_ik_test.py  ros_ik.py  third_arm_kinematics_plugin.cpp  vicon_pose_node.py  vicon_stabilization.py
launch/: IK_stab.launch  apriltag_2d_sys_id.launch  apriltag_prediction_closed_loop.launch  apriltag_setup.launch  apriltag_test.launch  hrc2d_speech_control.launch  hrc2d_speech_init.launch  hrc_2d_apriltag_setup.launch  kinect_skeleton_markers.launch  simple_head.launch~  third_arm.launch  third_arm.launch~  third_arm_control.launch  third_arm_gazebo.launch  third_arm_noetic.launch  third_arm_temp.launch  thirdarm_joystick.launch  thirdarm_joystick_test.launch  urdf_5dof.launch  urdf_rviz_disp.launch  urdf_with_human.launch  wrta_control.launch  wrta_gazebo.launch  wrta_rviz.launch
python_files/: 3d_slice_all3.py  demo_traj_v1_elbow_force.csv  demo_traj_v1_shoulder_moment.csv  demo_traj_v2_elbow_force.csv  demo_traj_v2_elbow_moment.csv  demo_traj_v2_shoulder_force.csv  dynamics_v1.py  dynamics_v2.py  fetching_dynamics_v2.py  fetching_elbow.csv  for_smoothing_fetch_dof_2.csv  handover_dynamics_v2.py  human.csv  human_concave_hull.csv  load_plots.py  motor1_brace_filtered.csv  motor1_hand_filtered.csv  motor2_brace_filtered.csv  motor2_hand_filtered.csv  torque_plots.py  torque_plots_traj2.py  torque_plots_traj3.py  v1_concave_hull.csv  v1_elbow.csv  v1_shoulder.csv  v2.csv  v2_concave_hull.csv  v2_elbow.csv  v2_fixed_human.csv  v2_shoulder.csv  v2_traj1_elbow_force.csv  v2_traj1_elbow_moment.csv  v2_traj1_shoulder_force.csv  workspace.py  (+2 more)
(+391 files in other folders)
